# coding_rules_python

./: .pre-commit-config.yaml  AGENTS.md  PHILOSOPHY.md  README.md  TODO.md  pyproject.toml
.claude/agents/: orchestrator.md
docs/: ISSUES.md  anthropics-full-guide-for-ai-skills.md
docs/superpowers/plans/: 2026-04-08-coding-rules-improvements.md
docs/superpowers/specs/: 2026-04-05-graceful-shutdown-design.md  2026-04-08-coding-rules-improvements-design.md
guides/: async-patterns.md  other-patterns.md  project-layout.md  qt-patterns.md  testing-heavyweight.md  testing-lightweight.md  type-system.md
notes/: other-patterns.md
reusable/: __init__.py
reusable/linting/: check_frozen_dataclasses.py  check_module_mutables.py  check_object_annotations.py  check_raw_dicts.py  check_type_ignore.py  lint_utils.py
reusable/logging/: __init__.py  logger_setup.py  non_log_stdout_output.py
reusable/shortcuts/: __init__.py  shortcuts.py
reusable_tests/: __init__.py  test_logging_reusable.py  test_shortcuts_base.py  test_shortcuts_manager.py
reusable_tests/fixtures/linting/: frozen_ignore.py  frozen_pass.py  mutables_bare_ignore.py  mutables_edge_cases.py  mutables_fail.py  mutables_ignore.py  mutables_pass.py  object_edge_cases.py  object_fail.py  object_ignore.py  raw_dicts_edge_cases.py  raw_dicts_ignore.py  raw_dicts_pass.py  type_ignore_fail.py  type_ignore_ignore.py  type_ignore_pass.py
reusable_tests/test_linting/: conftest.py  test_check_frozen_dataclasses.py  test_check_module_mutables.py  test_check_object_annotations.py  test_check_raw_dicts.py  test_check_type_ignore.py  test_lint_utils.py
rules/: coding_rules.md  coding_rules_short.md
shared/linting/: __init__.py  check_frozen_dataclasses.py  check_ignored_results.py  check_module_mutables.py  check_object_annotations.py  check_raw_dicts.py  check_type_ignore.py  lint_utils.py
shared/logging/: README.md  __init__.py  logger_setup.py  non_log_stdout_output.py
shared/shortcuts/: README.md  __init__.py  shortcuts.py
shared_tests/: __init__.py  test_logging_reusable.py  test_shortcuts_base.py  test_shortcuts_manager.py
shared_tests/fixtures/linting/: frozen_bare_ignore.py  frozen_edge_cases.py  frozen_fail.py  ignored_results_bare_ignore.py  ignored_results_fail.py  ignored_results_helpers.py  ignored_results_pass.py  mutables_edge_cases.py  mutables_fail.py  mutables_ignore.py  object_bare_ignore.py  object_pass.py  raw_dicts_bare_ignore.py  raw_dicts_fail.py  type_ignore_bare_ignore.py  type_ignore_edge_cases.py
shared_tests/fixtures/linting/ignored_results_imports/: consumer.py  pass_consumer.py  reexport_package.py
shared_tests/fixtures/linting/ignored_results_imports/pkg/: __init__.py  impl.py
shared_tests/fixtures/linting/ignored_results_imports/relpkg/: __init__.py  consumer.py  helper.py
shared_tests/test_linting/: __init__.py  conftest.py  test_check_frozen_dataclasses.py  test_check_ignored_results.py  test_check_module_mutables.py  test_check_object_annotations.py  test_check_raw_dicts.py  test_check_type_ignore.py  test_file_level_ignores.py  test_lint_utils.py
skills/architecting-python-changes/: SKILL.md
skills/building-multi-ui-apps/: SKILL.md
skills/building-python-backends/: SKILL.md
skills/building-qt-apps/: SKILL.md
skills/multi-ui-architecture/: SKILL.md
skills/python-error-handling/: SKILL.md
skills/python-testing-heavyweight/: SKILL.md
skills/python-testing-lightweight/: SKILL.md
skills/setting-up-logging/: SKILL.md
skills/setting-up-python-backends/: SKILL.md
skills/setting-up-python-projects/: SKILL.md  bootstrap_downstream_repo.sh
skills/setting-up-shortcuts/: SKILL.md
skills/setup-python-project/: SKILL.md
skills/testing-python/: SKILL.md
skills/working-with-qt/: SKILL.md
skills/write-single-python-script/: SKILL.md
skills/writing-python-code/: SKILL.md
skills/writing-python-scripts/: SKILL.md
templates/: AGENTS.md  gitignore  pre-commit-config.yaml  pyproject.toml  vscode_extensions.json  vscode_settings.json
templates/tests/: test_main.py
tests/: test_repo_layout_scripts.py
