[project]
name = "coding-rules-python"
description = "Personal Python coding standards, templates, shared components, and AI skills"
version = "0.1.0"
license = { text = "GPL-3.0" }
authors = [
    { name = "@quick-brown-foxxx", email = "no@e.mail" },
]
requires-python = ">=3.14"
dependencies = [
    "rusty-results>=1.1.1",
    "colorlog>=6.10.1",
    "pyside6>=6.10.1",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "basedpyright>=1.34.0",
    "pre-commit",
    "poethepoet",
]

# ============================================================================
# Type Checking - basedpyright (strict, no Any)
# ============================================================================

[tool.basedpyright]
# This repo targets a Linux-first workflow today; broaden only when the codebase actually needs it.
pythonPlatform = "Linux"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportAny = "error"
reportImplicitStringConcatenation = "none"
# basedpyright's generic unused-call rule is noisy here; Result handling is enforced by lint_ignored_results.
reportUnusedCallResult = "none"
reportUnnecessaryIsInstance = "none"
include = ["shared", "shared_tests", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "tests/fixtures",
    "shared_tests/fixtures",
]

# ============================================================================
# Linting & Formatting - ruff
# ============================================================================

[tool.ruff]
line-length = 120
target-version = "py314"
include = ["shared/**/*.py", "shared_tests/**/*.py", "tests/**/*.py"]
extend-exclude = [
    "venv", ".venv", "*.egg", "*.egg-info", "**/dist", "**/build",
    "**/__pycache__", "*.pyc", "*.pyo", "*.pyd", "*.so",
    ".git", ".pytest_cache",
    "tests/fixtures",
    "shared_tests/fixtures",
]

[tool.ruff.lint]
extend-select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "N",              # naming
    "UP",             # pyupgrade
    "ASYNC",          # async best practices
    "S",              # bandit security
    "B",              # bugbear
    "A",              # builtins
    "C4",             # comprehensions
    "SIM",            # simplify
    "PT",             # pytest style
    "PERF",           # performance
    "PLR",            # pylint refactor (max args, complexity)
    "FBT",            # flake8-boolean-trap (no bool params)
    "RUF",            # ruff-specific
]
ignore = [
    "S101",           # assert usage (needed in tests and preconditions)
    "RUF001",         # ambiguous unicode (Russian text)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT018", "FBT001"]
"tests/test_repo_layout_scripts.py" = ["S103", "S603", "S607"]
"shared_tests/*" = ["S101", "PT018"]
"shared_tests/fixtures/*" = ["C408", "RUF012", "F841", "B018"]
"shared_tests/test_linting/conftest.py" = ["S603"]
"shared_tests/test_linting/test_check_frozen_dataclasses.py" = ["PLR2004"]
"shared_tests/test_linting/test_check_module_mutables.py" = ["S603", "PLR2004"]
"shared_tests/test_linting/test_check_object_annotations.py" = ["S603", "PLR2004"]
"shared_tests/test_linting/test_check_raw_dicts.py" = ["S603", "PLR2004"]
"shared_tests/test_linting/test_check_type_ignore.py" = ["S603", "PLR2004"]
"shared_tests/test_linting/test_check_ignored_results.py" = ["S603"]
"shared_tests/test_linting/test_file_level_ignores.py" = ["S603"]

[tool.ruff.lint.pylint]
max-args = 5

# ============================================================================
# Testing - pytest
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["shared_tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ============================================================================
# Task Runner - poethepoet
# ============================================================================

[tool.poe.tasks]
test = "pytest"
# Linux/POSIX-first shell pipeline; adjust later if this repo needs broader platform support.
lint_objects.shell = "find tests shared shared_tests -path tests/fixtures -prune -o -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_object_annotations"
lint_frozen.shell = "find tests shared shared_tests -path tests/fixtures -prune -o -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_frozen_dataclasses"
lint_mutables.shell = "find tests shared shared_tests -path tests/fixtures -prune -o -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_module_mutables"
lint_type_ignore.shell = "find tests shared shared_tests -path tests/fixtures -prune -o -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_type_ignore"
lint_raw_dicts.shell = "find tests shared shared_tests -path tests/fixtures -prune -o -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_raw_dicts"
lint_ignored_results.shell = "find tests shared shared_tests -path tests/fixtures -prune -o -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_ignored_results"
lint_custom_linters.sequence = ["lint_objects", "lint_frozen", "lint_mutables", "lint_type_ignore", "lint_raw_dicts", "lint_ignored_results"]
lint_full.shell = "basedpyright && ruff check --fix . && ruff format . && poe lint_custom_linters"
