# ============================================================================
# Python Project Template - pyproject.toml
# Copy to new projects and update [project] section
# ============================================================================

[project]
name = "TODO_PROJECT_NAME"
description = "TODO_DESCRIPTION"
version = "0.1.0"
license = { text = "GPL-3.0" }
authors = [
    { name = "@quick-brown-foxxx", email = "no@e.mail" },
]
requires-python = ">=3.14"
dependencies = [
    "rusty-results>=1.1.1",      # Result pattern for error handling
    "colorlog>=6.10.1",          # Colored logging
    "pyside6>=6.10.1",           # Needed by shared/shortcuts full-copy bootstrap
    "tomli-w>=1.2.0",            # Needed by shared/shortcuts full-copy bootstrap
    # "httpx>=0.28.1",           # Async HTTP client (uncomment if needed)
    # "python-dotenv>=1.0.1",    # Env vars from .env (uncomment if needed)
    # "msgspec>=0.19.0",         # Struct validation + fast JSON (uncomment if needed)
    # "typer>=0.12.0",           # CLI framework (uncomment if needed)
    # "qasync>=0.28.0",          # Qt + asyncio (uncomment if needed)
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
    "basedpyright>=1.34.0",
    "pre-commit",
    "poethepoet",
    # "pytest-qt>=4.5.0",          # Qt testing (uncomment if needed)
    # "pytest-httpserver>=1.1.0",  # HTTP mock server (uncomment if needed)
]

# ============================================================================
# Build System
# ============================================================================

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/TODO_PACKAGE_NAME"]

# ============================================================================
# Type Checking - basedpyright (strict, no Any)
# ============================================================================

[tool.basedpyright]
# Template default for this repo's primary Linux workflow; downstream projects may need a different platform.
pythonPlatform = "Linux"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportAny = "error"
reportImportCycles = "error"
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"
reportUnnecessaryIsInstance = "none"
include = ["shared", "shared_tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
    "wrktrs",
    "shared_tests/fixtures",
]

# ============================================================================
# Linting & Formatting - ruff
# ============================================================================

[tool.ruff]
line-length = 120
target-version = "py314"
include = ["shared/**/*.py", "shared_tests/**/*.py"]
extend-exclude = [
    "venv", ".venv", "*.egg", "*.egg-info", "**/dist", "**/build",
    "**/__pycache__", "*.pyc", "*.pyo", "*.pyd", "*.so", "wrktrs",
    ".git", ".pytest_cache",
    "shared_tests/fixtures",
]

[tool.ruff.lint]
extend-select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "N",              # naming
    "UP",             # pyupgrade
    "ASYNC",          # async best practices
    "S",              # bandit security
    "B",              # bugbear
    "A",              # builtins
    "C4",             # comprehensions
    "SIM",            # simplify
    "PT",             # pytest style
    "PERF",           # performance
    "PLR",            # pylint refactor (max args, complexity)
    "FBT",            # flake8-boolean-trap (no bool params)
    "RUF",            # ruff-specific
]
ignore = [
    "S101",           # assert usage (needed in tests and preconditions)
    "RUF001",         # ambiguous unicode (Russian text)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT018", "FBT001"]
"shared_tests/*" = ["S101", "PT018"]
"shared_tests/fixtures/*" = ["C408", "RUF012", "F841", "B018"]

[tool.ruff.lint.pylint]
max-args = 5

# Wrapper enforcement — ban direct imports of wrapped libraries.
# Customize this list per project. Common reasons to wrap:
#   - poorly typed libs (need typed facade)
#   - platform-specific libs (need abstraction layer)
#   - libs you may swap out (need stable internal API)
# [tool.ruff.lint.flake8-tidy-imports.banned-api]
# "soundcard".msg = "Use src/wrappers/audio_backend.py instead"
# "faster_whisper".msg = "Use src/wrappers/transcriber.py instead"
# "huggingface_hub".msg = "Use src/wrappers/model_hub.py instead"

# ============================================================================
# Testing - pytest
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests", "shared_tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-n", "auto", "--dist", "worksteal"]
# markers = [
#     "unit: unit tests",
#     "integration: integration tests",
# ]

# ============================================================================
# Task Runner - poethepoet
# ============================================================================

[tool.poe.tasks]
test = "pytest"
app = "python -m TODO_PACKAGE_NAME"
lint_objects.shell = "find shared shared_tests -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_object_annotations"
lint_frozen.shell = "find shared shared_tests -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_frozen_dataclasses"
lint_mutables.shell = "find shared shared_tests -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_module_mutables"
lint_type_ignore.shell = "find shared shared_tests -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_type_ignore"
lint_raw_dicts.shell = "find shared shared_tests -path shared_tests/fixtures -prune -o -name '*.py' -print0 | xargs -0 python -m shared.linting.check_raw_dicts"
lint_custom_linters.sequence = ["lint_objects", "lint_frozen", "lint_mutables", "lint_type_ignore", "lint_raw_dicts"]
lint_full.shell = "basedpyright && ruff check --fix . && ruff format . && poe lint_custom_linters"
